Added isbn to book display